--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
     "marked": "^3.0.8",
+    "prismjs": "1.21.0",
     "sass": "1.26.10",
     "vite": "^1.0.0-rc.1"
   }
